# Conway

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: main.cpp
src/Engine/: Engine.cpp  Engine.hpp
src/GameBoard/: GameBoard.cpp  GameBoard.hpp
